Cerberus Changelog
==================

Here you can see the full list of changes between each Cerberus release.

Version 0.5.1
-------------

Not released yet.

- Added support for running tests with py.test
- Fix non-blocking problem introduced with 0.5 (Martin Ortbauer).
- Fix bug when _error() is calld twice for a field (Jaroslav Semančík).
- More precise error message in rule 'schema' validation (Jaroslav Semančík).
- Use 'allowed' field for integer just like for string (Peter Demin).

Version 0.5
-----------

Released on December 4 2013

- 'validator.errors' now returns a dictionary where keys are document fields
  and values are lists of validation errors for the field.
- Validator instances are now callable. Instead of `validated
  = validator.validate(document) you can now choose to do 'validated
  = validator(document)' (Eelke Hermens).

Version 0.4.0
-------------

Released on September 24 2013.

- 'validate_update' is deprecated and will be removed with next release. Use
  'validate' with 'update=True' instead. Closes #21.
- Fixed a minor encoding issue which made installing on Windows/Python3
  impossible. Closes #19 (Arsh Singh).
- Fix documentation typo (Daniele Pizzolli).
- 'type' validation is always performed first (only exception being
  'nullable'). On failure, subsequent rules on the same field are skipped.
  Closes #18.

Version 0.3.0
-------------

Released on July 9 2013.

- docstrings now conform to PEP8.
- `self.errors` returns an empty list if validate() has not been called.
- added validation for the 'float' data type.
- 'nullable' rule added to allow for null field values to be accepted in
  validations. This is different than required in that you can actively change
  a value to None instead of omitting or ignoring it. It is essentially the
  ignore_none_values, allowing for more fine grained control down to the field
  level (Kaleb Pomeroy).

Version 0.2.0
-------------

Released on April 18 2013.

- 'allow_unknown' option added.
